Fix strategy white space

--- a/src/app/pages/strategy/strategy.component.scss
+++ b/src/app/pages/strategy/strategy.component.scss
@@ -1,7 +1,12 @@
 .project_container {
 
+    display: -webkit-box;
+
+    display: -ms-flexbox;
+
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     padding: 16pt 0;
     max-width: 720pt;
     margin: auto;
@@ -16,20 +21,36 @@
         height: 100%;
 
 
+        display: -webkit-box;
+
+
+        display: -ms-flexbox;
+
+
         display: flex;
-        flex-direction: column;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
         text-align: center;
-        justify-content: center;
-        flex-wrap: nowrap;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
 
         .project_img {
 
-            margin: auto;
+            //margin: auto;
             padding: 5pt;
             //height: 500pt;
             //width: 550pt;
-            display: flex;
-            justify-content: center;
+            //display: -webkit-box;
+            //display: -ms-flexbox;
+            //display: flex;
+            //-webkit-box-pack: center;
+            //    -ms-flex-pack: center;
+            //        justify-content: center;
 
         }
 
